# ondc-bap

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  ecosystem.config.js  repomix-output.txt  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
docs/: architecture.mermaid  dev-environment-setup.md  status.md  technical.md
ondc-agent/: Cargo.toml  README.md
ondc-agent/examples/: basic_usage.rs  test_langchain.rs
ondc-agent/src/: error.rs  lib.rs
ondc-agent/src/agent/: mod.rs  ondc_agent.rs
ondc-agent/src/chains/: beckn_chain.rs  intent_chain.rs  mod.rs
ondc-agent/src/config/: agent_config.rs  mod.rs  provider_config.rs
ondc-agent/src/models/: beckn.rs  intent.rs  mod.rs
ondc-agent/src/providers/: mod.rs  ollama.rs  traits.rs
ondc-agent/src/services/: llm_service.rs  mod.rs
ondc-agent/src/validation/: beckn_validator.rs  input_validator.rs  intent_validator.rs  mod.rs
ondc-bap/: .env  Cargo.toml  README.md
ondc-bap/config/: production.toml  staging.toml
ondc-bap/src/: lib.rs
ondc-bap/src/config/: app_config.rs  environment.rs  mod.rs  ondc_config.rs
ondc-bap/src/error/: mod.rs
ondc-bap/src/infrastructure/: mod.rs
ondc-bap/src/presentation/: mod.rs  routes.rs  server.rs
ondc-bap/src/presentation/handlers/: admin.rs  health.rs  mod.rs  ondc.rs
ondc-bap/src/presentation/middleware/: cors.rs  error_handling.rs  logging.rs  mod.rs  rate_limiting.rs  security.rs
ondc-bap/src/services/: challenge_service.rs  key_management_service.rs  mod.rs  registry_client.rs  site_verification_service.rs
ondc-crypto/: Cargo.toml
ondc-crypto-algorithms/: Cargo.toml
ondc-crypto-algorithms/src/: aes.rs  blake2.rs  ed25519.rs  lib.rs  x25519.rs
ondc-crypto-cli/: Cargo.toml  README.md
ondc-crypto-cli/examples/: README.md  ci-test-example.sh  demo.sh  test-challenge.sh
ondc-crypto-cli/src/: main.rs
ondc-crypto-formats/: Cargo.toml
ondc-crypto-formats/src/: base64.rs  key_formats.rs  lib.rs
ondc-crypto-http/: Cargo.toml
ondc-crypto-http/src/: authorization_header.rs  lib.rs  signing_string.rs  vlookup.rs
ondc-crypto-traits/: Cargo.toml
ondc-crypto-traits/src/: error.rs  lib.rs  traits.rs  types.rs
ondc-crypto-utils/: Cargo.toml
ondc-crypto-utils/src/: lib.rs  time.rs  validation.rs
ondc-crypto/src/: api.rs  config.rs  lib.rs
