[workspace]
members = [
    "ondc-crypto",
    "ondc-crypto-traits",
    "ondc-crypto-algorithms", 
    "ondc-crypto-formats",
]

resolver = "2"

[workspace.dependencies]
# Core cryptographic dependencies
ed25519-dalek = "2.0"
blake2b_simd = "1.0"
x25519-dalek = "2.0"
rand = "0.8"

# Memory safety and security
zeroize = "1.7"
subtle = "2.5"

# Encoding and formatting
base64 = "0.21"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing and development
proptest = "1.3"
criterion = "0.5"

# Documentation
mdbook = "0.4"

# Development tools
rustfmt = "0.1"
clippy = "0.1"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ONDC Crypto Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ondc/ondc-crypto-rs"
description = "ONDC cryptographic utilities for Rust"
keywords = ["ondc", "crypto", "signing", "ed25519", "blake2"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
