[package]
name = "ondc-bap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ONDC BAP (Beckn Application Platform) server implementation"
keywords = ["ondc", "bap", "beckn", "server", "api", "crypto"]
categories = ["web-programming", "api-bindings", "cryptography"]
readme.workspace = true

[dependencies]
# Internal crypto crates
ondc-crypto-traits = { path = "../ondc-crypto-traits" }
ondc-crypto-algorithms = { path = "../ondc-crypto-algorithms" }
ondc-crypto-formats = { path = "../ondc-crypto-formats" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
rustls = "0.22"
rustls-pemfile = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# URL parsing
url = "2.4"

# Regex for validation
regex = "1.0"

# HTML escaping
html-escape = "0.2"

# AES encryption for challenge decryption
aes = "0.8"
block-modes = "0.9"

# Memory safety
zeroize = "1.7"

[dev-dependencies]
# Testing
axum-test = "15.0"
wiremock = "0.5"
tokio-test = "0.4"

# Property-based testing
proptest = "1.3"

[[bin]]
name = "ondc-bap"
path = "src/bin/main.rs" 