[package]
name = "ondc-crypto-algorithms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic algorithm implementations for ONDC"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# Internal crates
ondc-crypto-traits = { path = "../ondc-crypto-traits" }

# Cryptographic dependencies
ed25519-dalek = { workspace = true, features = ["rand_core"] }
blake2b_simd = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }

# Memory safety
zeroize = { workspace = true }
subtle = { workspace = true }

# Random number generation
rand = { workspace = true } 