[package]
name = "ondc-crypto-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ONDC cryptographic CLI utilities"
keywords = ["ondc", "crypto", "cli", "keys", "signing"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Internal workspace dependencies
ondc-crypto-algorithms = { path = "../ondc-crypto-algorithms" }
ondc-crypto-formats = { path = "../ondc-crypto-formats" }
ondc-crypto-traits = { path = "../ondc-crypto-traits" }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Random number generation
rand.workspace = true

# Output formatting
serde_json.workspace = true
serde.workspace = true
base64.workspace = true
hex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "ondc-crypto"
path = "src/main.rs"

[features]
default = []
dev-deps = [] 