[package]
name = "ondc-crypto-formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Encoding and decoding utilities for ONDC cryptographic operations"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# Internal crates
ondc-crypto-traits = { path = "../ondc-crypto-traits" }

# Encoding dependencies
base64 = { workspace = true }
hex = { workspace = true }

# DER encoding/decoding
der = { version = "0.8.0-rc.6", features = ["alloc", "pem", "std", "oid", "derive"] }

# Memory safety
zeroize = { workspace = true } 