[package]
name = "ondc-crypto-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ONDC-specific HTTP signature generation and verification"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# Internal crates
ondc-crypto-traits = { path = "../ondc-crypto-traits" }
ondc-crypto-algorithms = { path = "../ondc-crypto-algorithms" }
ondc-crypto-formats = { path = "../ondc-crypto-formats" }

# Time handling
chrono = { workspace = true }

# HTTP and networking (optional)
reqwest = { workspace = true, optional = true }

[features]
default = []
http-client = ["reqwest"] 