[package]
name = "ondc-crypto-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility functions and helper types for ONDC cryptographic operations"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# Internal crates
ondc-crypto-traits = { path = "../ondc-crypto-traits" }

# Time handling
chrono = { workspace = true } 